# gemmulem

./: .gitignore  BUGFIX_REPORT.md  CHANGELOG.md  CMakeLists.txt  Makefile  PACKAGING.md  README.md  gemmulem  install.sh  test_complex
.github/workflows/: build.yml
Test/: GMM_Expectation_Maximization.R  rbern.R  test_adaptive.c  test_complex_em.c  test_distributions.c  test_edge_cases.c  test_em.c  test_multivariate.c  test_pearson.c  test_spectral_online_mml.c
Test/R_Prototyping/: EM_EMM_Working_Version1.R  EM_GMM_Working_Version1.R  Initialization_and_nstarts_change_GMM_Prototype.R  KMeans_Initialization_GMM_Prototype.R
benchmark/: _gem_bench  _gem_bench.c  accuracy_bench.py  adaptive_accuracy.py  adaptive_extended.py  check_output.py  check_seeds.py  check_test3.py  compare_extant.py  compare_h2q  compare_h2q.cpp  correctness_check.py  debug_overlap.py  debug_weibull.py  debug_weibull2.py  direct_time.py  extant_comparison_results.json  fair_bench.py  final_bench.py  final_fair.py  full_bench.py  full_feature_test.py  gamma_bench.py  gen_and_time.sh  gen_mixed.py  highk_bench.py  init_debug.py  install_r.R  iter_check.py  k8_time.py  k8_verbose.py  periter.py  periter2.py  profile_hotpath.py  profile_k8.sh  quick_bench.py  run_h2q_comparison.sh  smoke_test.py  speed_bench.py  statistical_bench.py  (+3 more)
docs/: CNAME  _config.yml  api-reference.md  benchmarks.md  cli-reference.md  faq.md  index.html  index.md  quickstart.md
docs/_includes/: head_custom.html
docs/_pages/: Install.md  about.md
docs/contributors/: contributors.md
docs/theory/: distributions.md  em-algorithm.md  index.md  initialization.md  model-selection.md  multivariate.md  simd.md  squarem.md  streaming.md
extension/R/rgemmulem/: DESCRIPTION  NAMESPACE
extension/R/rgemmulem/R/: rgemmulemWrappers.R
extension/R/rgemmulem/demo/: 00Index  rgemmulem_test1.R  rgemmulem_test2.R  rgemmulem_test3.R
extension/R/rgemmulem/inst/extdata/: em_tst.csv  gmm_emm_tst.csv
extension/R/rgemmulem/src/: Makevars  rgemmulem.c
extension/python/: Makefile  build.bat  build.sh  gemmulem_example.py  pygemmulem.c  pyproject.toml  setup.py
paper/: application_note.tex
sim/: patternfilegen_em.R
src/: EM.c  EM.cpp  EM.h  emm_unmix_standalone.cpp  gmm_unmix_standalone.cpp  main.cpp
src/R/rgemmulem/R/: rgemmulemWrappers.R
src/R/rgemmulem/demo/: hello.R  rgemmulem_test3.R
src/R/rgemmulem/src/: Makevars
src/lib/: CMakeLists.txt  EM.c  EM.h  complex_em.c  complex_em.h  distributions.c  distributions.h  gpu_estep.c  gpu_estep.h  multivariate.c  multivariate.h  pearson.c  pearson.h  simd_complex_estep.c  simd_complex_estep.h  simd_estep.c  simd_estep.h  streaming.c  streaming.h  vect.c  vect.h
src/lib/simde/: check.h  debug-trap.h  hedley.h  simde-align.h  simde-arch.h  simde-common.h  simde-complex.h  simde-constify.h  simde-detect-clang.h  simde-diagnostic.h  simde-f16.h  simde-features.h  simde-math.h
src/lib/simde/arm/: neon.h  sve.h
src/lib/simde/arm/neon/: aba.h  abd.h  abdl.h  abs.h  add.h  addhn.h  addl.h  addl_high.h  addlv.h  addv.h  addw.h  addw_high.h  and.h  bcax.h  bic.h  bsl.h  cage.h  cagt.h  ceq.h  ceqz.h  cge.h  cgez.h  cgt.h  cgtz.h  cle.h  clez.h  cls.h  clt.h  cltz.h  clz.h  cmla.h  cmla_rot180.h  cmla_rot270.h  cmla_rot90.h  cnt.h  combine.h  create.h  cvt.h  dot.h  dot_lane.h  (+138 more)
src/lib/simde/arm/sve/: add.h  and.h  cmplt.h  cnt.h  dup.h  ld1.h  ptest.h  ptrue.h  qadd.h  reinterpret.h  sel.h  st1.h  sub.h  types.h  whilelt.h
src/lib/simde/mips/: msa.h
src/lib/simde/mips/msa/: add_a.h  adds.h  adds_a.h  addv.h  addvi.h  and.h  andi.h  ld.h  madd.h  st.h  subv.h  types.h
src/lib/simde/wasm/: relaxed-simd.h  simd128.h
src/lib/simde/x86/: avx.h  avx2.h  avx512.h  clmul.h  f16c.h  fma.h  gfni.h  mmx.h  sse.h  sse2.h  sse3.h  sse4.1.h  sse4.2.h  ssse3.h  svml.h  xop.h
src/lib/simde/x86/avx512/: 2intersect.h  4dpwssd.h  4dpwssds.h  abs.h  add.h  adds.h  and.h  andnot.h  avg.h  bitshuffle.h  blend.h  broadcast.h  cast.h  cmp.h  cmpeq.h  cmpge.h  cmpgt.h  cmple.h  cmplt.h  cmpneq.h  compress.h  conflict.h  copysign.h  cvt.h  cvts.h  cvtt.h  dbsad.h  div.h  dpbf16.h  dpbusd.h  dpbusds.h  dpwssd.h  dpwssds.h  expand.h  extract.h  fixupimm.h  fixupimm_round.h  flushsubnormal.h  fmadd.h  fmsub.h  (+68 more)
src/python/: Makefile  pygemmulem.c  setup.py
viz/: em_animation.html  paper_figures.html  pearson_em_animation.html
